--- a/index.html
+++ b/index.html
@@ -66,6 +66,13 @@
                 >About</a
               >
             </li>
+            <li class="nav-item mx-0 mx-lg-1">
+              <a
+                class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger"
+                href="#contact"
+                >Skills</a
+              >
+            </li>
           </ul>
         </div>
       </div>
@@ -353,7 +360,107 @@
         </div>
       </div>
     </section>
-
+    <!-- Contact Section-->
+    <section class="page-section" id="contact">
+      <div class="container">
+        <!-- Contact Section Heading-->
+        <h2
+          class="page-section-heading text-center text-uppercase text-secondary mb-0"
+        >
+        SKILLS
+        </h2>
+        <!-- Icon Divider-->
+        <div class="divider-custom">
+          <div class="divider-custom-line"></div>
+          <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
+          <div class="divider-custom-line"></div>
+        </div>
+        <!-- Contact Section Form-->
+        <div class="row">
+          <div class="col-md-6 col-lg-4 mb-5 mb-md-0">
+            <img src="assets/img/skills/bitbucket.jpeg" class="img-fluid"/>
+          </div>
+          <div class="col-md-6 col-lg-4 mb-5 mb-md-0">
+            <img src="assets/img/skills/bootstrap.png" class="img-fluid"/>
+          </div>
+          <div class="col-md-6 col-lg-4 mb-5 mb-md-0">
+            <img src="assets/img/skills/css.png" class="img-fluid"/>
+          </div>
+          <div class="col-md-6 col-lg-4 mb-5 mb-md-0">
+            <img src="assets/img/skills/docker.png" class="img-fluid" />
+          </div>
+          <div class="col-md-6 col-lg-4 mb-5 mb-md-0">
+            <img src="assets/img/skills/expo.png" class="img-fluid" />
+          </div>
+          <div class="col-md-6 col-lg-4 mb-5 mb-md-0">
+            <img src="assets/img/skills/figma.png" class="img-fluid" />
+          </div>
+          <div class="col-md-6 col-lg-4 mb-5 mb-md-0">
+            <img src="assets/img/skills/fuel.png" class="img-fluid" />
+          </div>
+          <div class="col-md-6 col-lg-4 mb-5 mb-md-0">
+            <img src="assets/img/skills/github.png" class="img-fluid" />
+          </div>
+          <div class="col-md-6 col-lg-4 mb-5 mb-md-0">
+            <img src="assets/img/skills/gitlab.png" class="img-fluid" />
+          </div>
+          <div class="col-md-6 col-lg-4 mb-5 mb-md-0">
+            <img src="assets/img/skills/html.png" class="img-fluid" />
+          </div>
+          <div class="col-md-6 col-lg-4 mb-5 mb-md-0">
+            <img src="assets/img/skills/jquery.jpeg" class="img-fluid" />
+          </div>
+          <div class="col-md-6 col-lg-4 mb-5 mb-md-0">
+            <img src="assets/img/skills/js.jpg" class="img-fluid" />
+          </div>
+          <div class="col-md-6 col-lg-4 mb-5 mb-md-0">
+            <img src="assets/img/skills/laravel.png" class="img-fluid" />
+          </div>
+          <div class="col-md-6 col-lg-4 mb-5 mb-md-0">
+            <img src="assets/img/skills/mysql.png" class="img-fluid" />
+          </div>
+          <div class="col-md-6 col-lg-4 mb-5 mb-md-0">
+            <img src="assets/img/skills/next.jpg" class="img-fluid" />
+          </div>
+          <div class="col-md-6 col-lg-4 mb-5 mb-md-0">
+            <img src="assets/img/skills/node.svg" class="img-fluid" />
+          </div>
+          <div class="col-md-6 col-lg-4 mb-5 mb-md-0">
+            <img src="assets/img/skills/notion.png" class="img-fluid" />
+          </div>
+          <div class="col-md-6 col-lg-4 mb-5 mb-md-0">
+            <img src="assets/img/skills/php.png" class="img-fluid" />
+          </div>
+          <div class="col-md-6 col-lg-4 mb-5 mb-md-0">
+            <img src="assets/img/skills/rails.jpeg" class="img-fluid" />
+          </div>
+          <div class="col-md-6 col-lg-4 mb-5 mb-md-0">
+            <img src="assets/img/skills/react.png" class="img-fluid" />
+          </div>
+          <div class="col-md-6 col-lg-4 mb-5 mb-md-0">
+            <img src="assets/img/skills/reactnative.jpeg" class="img-fluid" />
+          </div>
+          <div class="col-md-6 col-lg-4 mb-5 mb-md-0">
+            <img src="assets/img/skills/redmine.jpeg" class="img-fluid" />
+          </div>
+          <div class="col-md-6 col-lg-4 mb-5 mb-md-0">
+            <img src="assets/img/skills/redux.png" class="img-fluid" />
+          </div>
+          <div class="col-md-6 col-lg-4 mb-5 mb-md-0">
+            <img src="assets/img/skills/ruby.png" class="img-fluid" />
+          </div>
+          <div class="col-md-6 col-lg-4 mb-5 mb-md-0">
+            <img src="assets/img/skills/sass.jpg" class="img-fluid" />
+          </div>
+          <div class="col-md-6 col-lg-4 mb-5 mb-md-0">
+            <img src="assets/img/skills/ts.jpeg" class="img-fluid" />
+          </div>
+          <div class="col-md-6 col-lg-4 mb-5 mb-md-0">
+            <img src="assets/img/skills/vue.png" class="img-fluid" />
+          </div>
+        </div>
+      </div>
+    </section
     <!-- Footer-->
     <footer class="footer text-center">
       <div class="container">
@@ -454,6 +561,7 @@
                   <dl>
                     <dt>使用技術</dt>
                     <dd>ReactNative</dd>
+                    <dd>Next.js</dd>
                     <dd>TypeScript</dd>
                     <dd>jest</dd>
                     <dd>PHP(Laravel)</dd>
@@ -999,6 +1107,7 @@
                     <dd>Vue.js</dd>
                     <dd>FuelPHP</dd>
                     <dd>MySQL</dd>
+                    <dd>Bootstrap</dd>
                   </dl>
                   <button class="btn btn-primary" data-dismiss="modal">
                     <i class="fas fa-times fa-fw"></i>Close Window
