もろもろ修正

--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@
         </div>
         <!-- About Section Content-->
         <div class="row">
-          <div class="col-lg-4 ml-auto">
+          <div class="">
             <p class="lead">
               初めましてフリーランスの柳沢と申します。<br />
               Rails/Vue.js/jQueryなどでのフロントエンド <br />
