柳屋に変更

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     />
     <meta name="description" content="" />
     <meta name="author" content="" />
-    <title>Hidetoshi Yanagisawa　ポートフォリオ</title>
+    <title>柳屋合同会社</title>
     <!-- Favicon-->
     <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico" />
     <!-- Font Awesome icons (free version)-->
@@ -38,7 +38,7 @@
     >
       <div class="container">
         <a class="navbar-brand js-scroll-trigger" href="#page-top"
-          >Hidetoshi Yanagisawa</a
+          >柳屋合同会社</a
         ><button
           class="navbar-toggler navbar-toggler-right text-uppercase font-weight-bold bg-primary text-white rounded"
           type="button"
@@ -386,7 +386,7 @@
         <div class="row">
           <div class="">
             <p class="lead">
-              初めましてフリーランスの柳沢と申します。<br />
+              柳屋合同会社の代表柳沢と申します。<br />
               Rails/Vue.js/jQueryなどでのフロントエンド <br />
               Rails/PHP/NodeJsなどでのバックエンド<br />
               ReactNativeでのモバイルアプリケーション開発<br />
@@ -403,6 +403,24 @@
               現在50ヵ国目で、10年以内には制覇する予定です！
             </p>
           </div>
+        </div>
+        <div >
+          <h3 class="masthead-subheading  text-white">事業内容</h3>
+          <ol>
+            <li>ＩＴに関するコンサルティング
+            <li>ＩＴに関する開発、設計及び企画</li>
+            <li>職業紹介事業及び労働者派遣事業</li>
+            <li>インターネットによる音楽、動画、映像等の配信に関する企画、制作
+            販売及び管理</li>
+            <li>書籍、雑誌等の印刷物並びに電子出版物等の企画、制作及び販売</li>
+            <li>前各号に附帯関連する一切の事業</li>
+          </ol>
+
+          <h3 class="masthead-subheading  text-white">設立</h3>
+<p class="leadd">2020年4月23日</p>
+
+<h3 class="masthead-subheading  text-white">資本金</h3>
+<p class="leadd">1,000,000円</p>
         </div>
       </div>
     </section>
